package com.scb.supplychainbrief.common.util;

public enum DeliveryStatus {
    PLANIFIEE,
    EN_COURS,
    LIVREE
}
