package com.scb.supplychainbrief.common.util;

public enum SupplyOrderStatus {
    EN_ATTENTE,
    EN_COURS,
    RECUE
}
